Rework menus for mobile compatibility Start supporting touch events for non-buggy iOS support and faster menus Display and hide wallets on click instead of on mouseout to prevent accidental clicks or mouseout events Add a wrapper function to detect ghost and accidental clicks Reorganize wallet javascript functions for better readability Fix bug in which a wallet would display on mouse over after user clicked inside it's bubble Fix accidental use of global variables

--- a/_less/ie.css
+++ b/_less/ie.css
@@ -34,32 +34,80 @@ body{
 	display:inline;
 }
 
+.menusimple{
+	margin:0;
+	position:absolute;
+	top:8px;
+	left:245px;
+	padding:0;
+	height:35px;
+}
 .menusimple li{
+	list-style:none;
 	zoom:1;
 	display:inline;
+	position:relative;
+	padding:0;
+	margin:0 3px;
+}
+.menusimple li a,
+.menusimple li a:active,
+.menusimple li a:visited,
+.menusimple li a:link{
+	text-decoration:none;
+	color:#2c6fad;
 }
 .menusimple li a{
 	font-family:sans-serif;
-}
-.menusimple li:hover a,
-.menusimple li.active a{
-	color:#fff;
+	display:block;
+	white-space:nowrap;
+	font-size:110%;
+	padding:6px 10px 4px 10px;
 }
 .menusimple li ul{
 	width:190px;
+	display:none;
+	position:absolute;
+	background-color:#fff;
+	border:1px solid #2c6fad;
 	min-width:auto;
+	padding:5px 0;
+	margin:0;
+	left:0;
 }
 .menusimple li ul li{
+	margin:0;
+	display:block;
 	width:100%;
 }
 .menusimple li ul li a{
 	width:100%;
+	font-size:100%;
+	margin:1px 0;
+	padding:6px 10px 3px 10px;
 }
-.menusimple li ul li a:hover,
-.menusimple li ul li.active a,
-.menusimple li ul li.active a:link,
-.menusimple li ul li.active a:visited,
-.menusimple li ul li.active a:active{
+.menusimple li ul li a,
+.menusimple li ul li a:active,
+.menusimple li ul li a:visited,
+.menusimple li ul li a:link{
+	text-decoration:none;
+	color:#2c6fad;
+}
+.menusimple li:hover{
+	background-color:#2c6fad;
+}
+.menusimple li a:hover,
+.menusimple li:hover a,
+.menusimple li.active a,
+.menusimple li.active a:active,
+.menusimple li.active a:visited,
+.menusimple li.active a:link{
+	color:#fff;
+}
+.menusimple li:hover ul{
+	display:block;
+}
+.menusimple li ul li a:hover{
 	color:#fff;
 }
 
